fix: FIT-284: Browser Webpage Title Not Updating (#8610)
Co-authored-by: bmartel <bmartel@users.noreply.github.com>

--- a/label_studio/templates/base.html
+++ b/label_studio/templates/base.html
@@ -191,6 +191,7 @@
     },
 
     {% block app_more_settings %}
+      page_title: "Label Studio",
       flags: {
         allow_organization_webhooks: {{settings.ALLOW_ORGANIZATION_WEBHOOKS|yesno:"true,false"}},
         storage_persistence: {{ settings.STORAGE_PERSISTENCE|yesno:"true,false" }}, 
