docs: add breast cancer template (#8617)

--- a/docs/source/templates/gallery_community_contributions.ejs
+++ b/docs/source/templates/gallery_community_contributions.ejs
@@ -7,6 +7,15 @@ layout: templates
 meta_title: Gallery of Community Templates
 meta_description: Gallery of community contributed templates for Label Studio
 cards:
+- title: Breast Cancer Mammogram Classification
+  categories:
+  - community contributions
+  image: "/images/templates/breast-cancer-mammogram-classification.jpg"
+  url: "/templates/breast_cancer_mammogram_classification.html"
+  community: true
+  community_repo: awesome-label-studio-config
+  github_repo: humanSignal/awesome-label-studio-config
+
 - title: HTML NER Tagging
   categories:
   - community contributions
