feat: FIT-771: Display name of project being deleted on Danger Zone confirmation dialogs (#8623)
Co-authored-by: ricardoantoniocm <ricardoantoniocm@users.noreply.github.com>

--- a/web/apps/labelstudio/src/components/Modal/Modal.scss
+++ b/web/apps/labelstudio/src/components/Modal/Modal.scss
@@ -76,7 +76,7 @@
   }
 
   &__footer {
-    padding: 1rem 1.5rem;
+    padding: var(--spacing-base) var(--spacing-wider);
     text-align: center;
     font-size: 14px;
     line-height: 22px;
