fix: FIT-808: Filters visuals tweaks (#8650)

--- a/web/libs/datamanager/src/components/Filters/Filters.scss
+++ b/web/libs/datamanager/src/components/Filters/Filters.scss
@@ -12,6 +12,17 @@
 
   &_sidebar {
     width: 100%;
+
+    .filterLine {
+      .datepicker__output_range {
+        display: flex;
+        width: 100%;
+
+        .input-dm {
+          min-width: 100px;
+        }
+      }
+    }
   }
 
   &__actions {
