--- a/docs/themes/v2/layout/templates.ejs
+++ b/docs/themes/v2/layout/templates.ejs
@@ -6,7 +6,7 @@
   <% page.cards.forEach(function(card) { %>
     <% const tags = typeof card.categories === "object" ? card.categories.join(", ") : card.categories %>
     <div class="templates-card">
-      <img src="<%= card.image %>" alt="" />
+      <% if (card.image) { %><img src="<%= card.image %>" alt="" /><% } %>
       <a href="<%= card.url %>"><%- partial("component/heading", {text: card.title, size: "XXSmall", tag: "span" }) %></a>
       <%- partial("component/text", {text: tags, tag: "p", size: "Small"}) %>
     </div>
