feat: FIT-835: Improve customize columns button when Quick View is open (#8719)
Co-authored-by: Yousif Yassi <yousif@heartex.com>
Co-authored-by: ricardoantoniocm <ricardoantoniocm@users.noreply.github.com>

--- a/web/libs/datamanager/src/components/App/App.scss
+++ b/web/libs/datamanager/src/components/App/App.scss
@@ -80,7 +80,7 @@
     content: "";
     position: absolute;
     height: 4px;
-    background: linear-gradient(to bottom, var(--black_15), transparent);
+    background: linear-gradient(to bottom, rgba(var(--color-neutral-shadow-raw) / 20%) 0%, transparent 100%);
   }
 }
 
