feat: FIT-871: Update Design Tokens (#8724)
Co-authored-by: ricardoantoniocm <ricardoantoniocm@users.noreply.github.com>

--- a/web/libs/ui/src/tokens/tokens.scss
+++ b/web/libs/ui/src/tokens/tokens.scss
@@ -275,8 +275,8 @@
   --color-accent-sand-base-raw: 202 197 184;
   --color-accent-sand-subtle: var(--color-sand-100);
   --color-accent-sand-subtle-raw: 249 248 246;
-  --color-accent-sand-subtlest: var(--color-sand-100);
-  --color-accent-sand-subtlest-raw: 249 248 246;
+  --color-accent-sand-subtlest: var(--color-sand-000);
+  --color-accent-sand-subtlest-raw: 253 253 252;
   --color-sand-100: rgb(249 248 246);
   --color-sand-200: rgb(240 239 235);
   --color-sand-300: rgb(225 222 213);
@@ -413,6 +413,8 @@
   --font-size-12: 0.75rem;
   --font-size-14: 0.875rem;
   --font-size-16: 1rem;
+  --font-size-18: 1.125rem;
+  --font-size-20: 1.25rem;
   --font-size-22: 1.375rem;
   --font-size-24: 1.5rem;
   --font-size-28: 1.75rem;
@@ -499,15 +501,15 @@
   --font-size-label-smaller: var(--font-size-12);
   --font-size-label-small: var(--font-size-14);
   --font-size-label-medium: var(--font-size-16);
-  --font-size-title-small: var(--font-size-14);
-  --font-size-title-medium: var(--font-size-16);
-  --font-size-title-large: var(--font-size-22);
-  --font-size-headline-small: var(--font-size-24);
-  --font-size-headline-medium: var(--font-size-28);
-  --font-size-headline-large: var(--font-size-32);
-  --font-size-display-small: var(--font-size-36);
-  --font-size-display-medium: var(--font-size-48);
-  --font-size-display-large: var(--font-size-56);
+  --font-size-title-small: var(--font-size-18);
+  --font-size-title-medium: var(--font-size-20);
+  --font-size-title-large: var(--font-size-24);
+  --font-size-headline-small: var(--font-size-28);
+  --font-size-headline-medium: var(--font-size-32);
+  --font-size-headline-large: var(--font-size-36);
+  --font-size-display-small: var(--font-size-48);
+  --font-size-display-medium: var(--font-size-56);
+  --font-size-display-large: var(--font-size-64);
   --font-weight-light: 300;
   --font-weight-light-italic: light italic;
   --font-weight-regular: 400;
